@@ -1,3 +1,5 @@
+############2015-12-17#####################
+alter table pay_coupon_template add column target_user int(11) default 1;
 ############2015-12-16#####################
 alter table pay_coupon_template add column way_type int(11) default 0;
 alter table pay_coupon_template add column post_img varchar(512) NOT NULL ;
